# edge-to-cloud-triage

./: README.md
.github/workflows/: backend-ci.yml  edge-client-ci.yml  watchdog-ci.yml
Plan/: edge-to-cloud-telemetry-ai-triage-system-phased-implementation-plan (1).docx  edge-to-cloud-telemetry-ai-triage-system-phased-implementation-plan.md  edge-to-cloud-telemetry-ai-triage-system-phased-implementation-plan.txt
ai-triage-agent/: main.py
ai-triage-agent/agent/: analyzer.py  parser.py  reporter.py
ai-triage-agent/tests/: test_analyzer.py  test_parser.py
backend/: pom.xml
docs/docs/: api-reference.md  architecture.md  db-schema.md  runbook.md
docs/infra/: docker-compose.yml
docs/infra/terraform/: main.tf
edge-client/: CMakeLists.txt  Dockerfile
edge-client/include/common/: types.h
edge-client/include/telemetry/: collector.h  fault_watcher.h
edge-client/include/transport/: http_sender.h
edge-client/include/util/: config.h  safe_queue.h
edge-client/src/: main.cpp
edge-client/src/telemetry/: collector.cpp  fault_watcher.cpp
edge-client/src/transport/: http_sender.cpp
edge-client/src/util/: config.cpp
infra/terraform/: outputs.tf  variables.tf
ui/: Dockerfile  index.html  nginx.conf  package.json
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx  StatusBadge.tsx
ui/src/pages/: DevicesPage.tsx  FaultsPage.tsx  ReportsPage.tsx  TelemetryPage.tsx
ui/src/types/: index.ts
watchdog-lambda/: template.yaml
watchdog-lambda/src/WatchdogLambda/: Function.cs  WatchdogLambda.csproj
(+53 files in other folders)
